Use custom url variable sitewide

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -7,32 +7,32 @@
                 <div class="col-md-6 mb-5">
                     <h3 class="aur-footer-heading">Apps</h3>
                     <nav class="nav flex-wrap">
-                        <a class="nav-link" href="{{ site.github.url }}/cinemadrape/windows/">CinemaDrape</a>
-                        <a class="nav-link" href="{{ site.github.url }}/colorveil/windows/">ColorVeil</a>
-                        <a class="nav-link" href="{{ site.github.url }}/injuredpixels/windows/">InjuredPixels</a>
-                        <a class="nav-link" href="{{ site.github.url }}/pixelhealer/windows/">PixelHealer</a>
-                        <a class="nav-link" href="{{ site.github.url }}/colortypist/windows/">Colortypist</a>
-                        <a class="nav-link" href="{{ site.github.url }}/whatsmyco/web/">WhatsMyCo</a>
-                        <a class="nav-link" href="{{ site.github.url }}/thumbico/windows/">Thumbico</a>
-                        <a class="nav-link" href="{{ site.github.url }}/htmtied/windows/">HTMtied</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/cinemadrape/windows/">CinemaDrape</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/colorveil/windows/">ColorVeil</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/injuredpixels/windows/">InjuredPixels</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/pixelhealer/windows/">PixelHealer</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/colortypist/windows/">Colortypist</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/whatsmyco/web/">WhatsMyCo</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/thumbico/windows/">Thumbico</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/htmtied/windows/">HTMtied</a>
                     </nav>
                 </div>
 
                 <div class="col-md-3 mb-5">
                     <h3 class="aur-footer-heading">Pages</h3>
                     <nav class="nav flex-wrap">
-                        <a class="nav-link" href="{{ site.github.url }}">Home</a>
-                        <a class="nav-link" href="{{ site.github.url }}/apps/">Apps</a>
-                        <a class="nav-link" href="{{ site.github.url }}/reviews/">Reviews</a>
-                        <a class="nav-link" href="{{ site.github.url }}/support/">Support</a>
-                        <a class="nav-link" href="{{ site.github.url }}/about/">About</a>
+                        <a class="nav-link" href="{{ site.custom.url }}">Home</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/apps/">Apps</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/reviews/">Reviews</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/support/">Support</a>
+                        <a class="nav-link" href="{{ site.custom.url }}/about/">About</a>
                     </nav>
                 </div>
 
                 <div class="col-md-3 mb-5">
                     <h3 class="aur-footer-heading">Social</h3>
                     <nav class="nav">
-                        <a class="nav-link" href="{{ site.github.url }}/about/social/tumblr/">
+                        <a class="nav-link" href="{{ site.custom.url }}/about/social/tumblr/">
                             <i class="fa fa-tumblr aur-icon-social" aria-hidden="true"></i>
                         </a>
                         <a class="nav-link" href="https://github.com/aurelitec" target="_blank">
@@ -43,7 +43,7 @@
             </div>
 
             <p class="text-center">Copyright © 1999-2017 Aurelitec. All rights reserved.
-                <a class="d-sm-block d-lg-inline" href="{{ site.github.url }}/about/privacy/">Privacy Policy</a>
+                <a class="d-sm-block d-lg-inline" href="{{ site.custom.url }}/about/privacy/">Privacy Policy</a>
             </p>
 
         </div>
