--- a/_includes/jumbotrons/cinemadrape-windows.html
+++ b/_includes/jumbotrons/cinemadrape-windows.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.github.url }}/cinemadrape/windows/" class="aur-appname">CinemaDrape</a>
+                    <a href="{{ site.custom.url }}/cinemadrape/windows/" class="aur-appname">CinemaDrape</a>
                     Minimize distractions and focus on your task by blacking out other screen areas.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.github.url }}/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.custom.url }}/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.github.url }}/cinemadrape/windows/">
+                <a href="{{ site.custom.url }}/cinemadrape/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.github.url }}/img/apps/cinemadrape/windows/jumbotron/cinemadrape-windows-jumbotron-image.jpg" alt="CinemaDrape Screenshot" />
+                    src="{{ site.custom.url }}/img/apps/cinemadrape/windows/jumbotron/cinemadrape-windows-jumbotron-image.jpg" alt="CinemaDrape Screenshot" />
                 </a>
             </div>
         </div>
