--- a/_includes/jumbotrons/colortypist-windows.html
+++ b/_includes/jumbotrons/colortypist-windows.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.github.url }}/colortypist/windows/" class="aur-appname">Colortypist</a>
+                    <a href="{{ site.custom.url }}/colortypist/windows/" class="aur-appname">Colortypist</a>
                     Type in a color name or code, and see it fill your screen in real-time, while you type.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.github.url }}/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.custom.url }}/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.github.url }}/colortypist/windows/">
+                <a href="{{ site.custom.url }}/colortypist/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.github.url}}/img/apps/colortypist/windows/jumbotron/colortypist-windows-jumbotron-image.png" alt="Colortypist Screenshot" />
+                    src="{{ site.custom.url}}/img/apps/colortypist/windows/jumbotron/colortypist-windows-jumbotron-image.png" alt="Colortypist Screenshot" />
                 </a>
             </div>
         </div>
