--- a/_includes/jumbotrons/injuredpixels-windows.html
+++ b/_includes/jumbotrons/injuredpixels-windows.html
@@ -4,21 +4,21 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.github.url }}/injuredpixels/windows/" class="aur-appname">InjuredPixels<span class="hidden-xs-down"> for Windows</span></a>
+                    <a href="{{ site.custom.url }}/injuredpixels/windows/" class="aur-appname">InjuredPixels<span class="hidden-xs-down"> for Windows</span></a>
                     Check your PC, laptop or tablet screen for dead pixels, scratches or defects.
                 </h1>
                 <p>
-                    <a class="btn btn-primary" href="{{ site.github.url }}/injuredpixels/windows/download/" role="button">
+                    <a class="btn btn-primary" href="{{ site.custom.url }}/injuredpixels/windows/download/" role="button">
                         <span class="hidden-sm-up">Get it Free for Windows</span>
                         <span class="hidden-xs-down">Run or Install for Free</span>
                     </a>
                 </p>
-                <p class="aur-extra">Also available for <a class="aur-link" href="{{ site.github.url }}/injuredpixels/android/">Android</a></p>
+                <p class="aur-extra">Also available for <a class="aur-link" href="{{ site.custom.url }}/injuredpixels/android/">Android</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.github.url }}/injuredpixels/windows/">
+                <a href="{{ site.custom.url }}/injuredpixels/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.github.url }}/img/apps/injuredpixels/windows/jumbotron/injuredpixels-windows-jumbotron-image.png"
+                    src="{{ site.custom.url }}/img/apps/injuredpixels/windows/jumbotron/injuredpixels-windows-jumbotron-image.png"
                     alt="InjuredPixels for Windows Screenshot" />
                 </a>
             </div>
