--- a/_includes/stripes/featured/colortypist-windows.html
+++ b/_includes/stripes/featured/colortypist-windows.html
@@ -1,16 +1,16 @@
 <!-- Colortypist for Windows Featured Logos -->
     {% capture thecontent %}
     <a href="http://download.cnet.com/Colortypist/3000-2072_4-75627679.html" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/d/download-com/download-com-white.png" alt="Download.com" />
+        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/d/download-com/download-com-white.png" alt="Download.com" />
     </a>
     <a href="http://www.chip.de/downloads/Colortypist_77245085.html" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
+        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
     </a>
     <a href="http://www.softpedia.com/get/Internet/WEB-Design/Web-Design-related/colortypist.shtml" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
+        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
     </a>
     <a href="http://www.01net.com/telecharger/windows/Personnaliser/Images_d_arriere_plan/Utilitaires/fiches/133840.html" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
+        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
