--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.custom.url }}/css/main.css">
     <meta name="theme-color" content="#1BADEA">
 
     {% seo %}
@@ -30,16 +30,16 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a class="navbar-brand" href="{{ site.github.url }}/">
-                    <img alt="Aurelitec" src="{{ site.github.url }}/img/theme/branding/aurelitec-logo-header.png" />
+                <a class="navbar-brand" href="{{ site.custom.url }}/">
+                    <img alt="Aurelitec" src="{{ site.custom.url }}/img/theme/branding/aurelitec-logo-header.png" />
                 </a>
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <div class="navbar-nav">
-                      <a class="nav-item nav-link" href="{{ site.github.url }}/apps/">Apps</a>
-                      <a class="nav-item nav-link" href="{{ site.github.url }}/reviews/">Reviews</a>
-                      <a class="nav-item nav-link" href="{{ site.github.url }}/support/">Support</a>
-                      <a class="nav-item nav-link" href="{{ site.github.url }}/about/">About</a>
+                      <a class="nav-item nav-link" href="{{ site.custom.url }}/apps/">Apps</a>
+                      <a class="nav-item nav-link" href="{{ site.custom.url }}/reviews/">Reviews</a>
+                      <a class="nav-item nav-link" href="{{ site.custom.url }}/support/">Support</a>
+                      <a class="nav-item nav-link" href="{{ site.custom.url }}/about/">About</a>
                     </div>
                 </div>
             </div>
