Update CinemaDrape open source license

--- a/_includes/css/page.css
+++ b/_includes/css/page.css
@@ -66,6 +66,16 @@
 
 
 /* ==========================================================================
+   License Pages
+   ========================================================================== */
+
+#license-text {
+    background: #fbfbfb;
+    border: 1px solid #eee;
+    padding: 2rem;
+}
+
+/* ==========================================================================
    Privacy Policy
    ========================================================================== */
 
