Add UTM tracking to sponsor pages; fix https download links

--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -6,7 +6,7 @@
                     <span class="aur-appname">{{ page.appname }}</span>
                     is free because it's supported by east-tec Eraser! Protect your privacy, cover your tracks!
                 </h1>
-                <p><a class="btn btn-primary" href="http://www.east-tec.com/eraser/download/" target="_blank" role="button">Free Download</a></p>
+                <p><a class="btn btn-primary" href="http://www.east-tec.com/eraser/download/?utm_source=aurelitec&utm_medium=sponsor&utm_campaign={{ page.url | slugify }}" target="_blank" role="button">Free Download</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="http://www.east-tec.com/eraser/download/" target="_blank">
