Fix east-tec outbound links

--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -9,7 +9,7 @@
                 <p><a class="btn btn-primary" href="http://www.east-tec.com/eraser/download/?utm_source=aurelitec&utm_medium=sponsor&utm_campaign={{ page.url | slugify }}" target="_blank" role="button">Free Download</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="http://www.east-tec.com/eraser/download/" target="_blank">
+                <a href="http://www.east-tec.com/eraser/download/?utm_source=aurelitec&utm_medium=sponsor&utm_campaign={{ page.url | slugify }}" target="_blank">
                     <img class="img-fluid aur-jumbotron-shot"
                     src="{{ site.custom.url }}/img/third/east-tec/east-tec-jumbotron-image.png"
                     alt="east-tec Eraser Screenshot" />
