Add first CinemaDrape data review; fix year

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -42,8 +42,8 @@
                 </div>
             </div>
 
-            <p class="text-center">Copyright © 1999-2017 Aurelitec. All rights reserved.
-                <a class="d-sm-block d-lg-inline" href="{{ site.custom.url }}/about/privacy/">Privacy Policy</a>
+            <p class="text-center">Copyright © 1999-{{ site.time | date: '%Y' }} Aurelitec. All rights reserved.
+                <a class="d-sm-block d-lg-inline" href="{{ site.url }}/about/privacy/">Privacy Policy</a>
             </p>
 
         </div>
