Start using site.url for absolute links

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -7,32 +7,32 @@
                 <div class="col-md-6 mb-5">
                     <h3 class="aur-footer-heading">Apps</h3>
                     <nav class="nav flex-wrap">
-                        <a class="nav-link" href="{{ site.custom.url }}/cinemadrape/windows/">CinemaDrape</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/colorveil/windows/">ColorVeil</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/injuredpixels/windows/">InjuredPixels</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/pixelhealer/windows/">PixelHealer</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/colortypist/windows/">Colortypist</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/whatsmyco/web/">WhatsMyCo</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/thumbico/windows/">Thumbico</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/htmtied/windows/">HTMtied</a>
+                        <a class="nav-link" href="{{ site.url }}/cinemadrape/windows/">CinemaDrape</a>
+                        <a class="nav-link" href="{{ site.url }}/colorveil/windows/">ColorVeil</a>
+                        <a class="nav-link" href="{{ site.url }}/injuredpixels/windows/">InjuredPixels</a>
+                        <a class="nav-link" href="{{ site.url }}/pixelhealer/windows/">PixelHealer</a>
+                        <a class="nav-link" href="{{ site.url }}/colortypist/windows/">Colortypist</a>
+                        <a class="nav-link" href="{{ site.url }}/whatsmyco/web/">WhatsMyCo</a>
+                        <a class="nav-link" href="{{ site.url }}/thumbico/windows/">Thumbico</a>
+                        <a class="nav-link" href="{{ site.url }}/htmtied/windows/">HTMtied</a>
                     </nav>
                 </div>
 
                 <div class="col-md-3 mb-5">
                     <h3 class="aur-footer-heading">Pages</h3>
                     <nav class="nav flex-wrap">
-                        <a class="nav-link" href="{{ site.custom.url }}">Home</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/apps/">Apps</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/reviews/">Reviews</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/support/">Support</a>
-                        <a class="nav-link" href="{{ site.custom.url }}/about/">About</a>
+                        <a class="nav-link" href="{{ site.url }}">Home</a>
+                        <a class="nav-link" href="{{ site.url }}/apps/">Apps</a>
+                        <a class="nav-link" href="{{ site.url }}/reviews/">Reviews</a>
+                        <a class="nav-link" href="{{ site.url }}/support/">Support</a>
+                        <a class="nav-link" href="{{ site.url }}/about/">About</a>
                     </nav>
                 </div>
 
                 <div class="col-md-3 mb-5">
                     <h3 class="aur-footer-heading">Social</h3>
                     <nav class="nav">
-                        <a class="nav-link" href="{{ site.custom.url }}/about/social/tumblr/">
+                        <a class="nav-link" href="{{ site.url }}/about/social/tumblr/">
                             <i class="fa fa-tumblr aur-icon-social" aria-hidden="true"></i>
                         </a>
                         <a class="nav-link" href="https://github.com/aurelitec" target="_blank">
