--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/colorveil/windows/" class="aur-appname">ColorVeil</a>
+                    <a href="{{ site.url }}/colorveil/windows/" class="aur-appname">ColorVeil</a>
                     Color filters over your screen. Reduce eye strain, help with Dyslexia and Visual Stress.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.custom.url }}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/colorveil/windows/">
+                <a href="{{ site.url }}/colorveil/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.custom.url }}/img/apps/colorveil/windows/jumbotron/colorveil-windows-jumbotron-image.png" alt="ColorVeil Screenshot" />
+                    src="{{ site.url }}/img/apps/colorveil/windows/jumbotron/colorveil-windows-jumbotron-image.png" alt="ColorVeil Screenshot" />
                 </a>
             </div>
         </div>
