--- a/_includes/jumbotrons/htmtied-windows.html
+++ b/_includes/jumbotrons/htmtied-windows.html
@@ -4,14 +4,14 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/htmtied/windows/" class="aur-appname">HTMtied</a>
+                    <a href="{{ site.url }}/htmtied/windows/" class="aur-appname">HTMtied</a>
                     Save your Internet bookmarks as tiny portable HTML link files, and use them anywhere.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.custom.url }}/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/htmtied/windows/">
-                    <img class="img-fluid aur-jumbotron-shot" src="{{ site.custom.url }}/img/apps/htmtied/windows/jumbotron/htmtied-windows-jumbotron-image.png"
+                <a href="{{ site.url }}/htmtied/windows/">
+                    <img class="img-fluid aur-jumbotron-shot" src="{{ site.url }}/img/apps/htmtied/windows/jumbotron/htmtied-windows-jumbotron-image.png"
                     alt="HTMtied for Windows Screenshot" />
                 </a>
             </div>
