--- a/_includes/jumbotrons/injuredpixels-android.html
+++ b/_includes/jumbotrons/injuredpixels-android.html
@@ -4,21 +4,21 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/injuredpixels/android/" class="aur-appname">InjuredPixels<span class="hidden-xs-down"> for Android</span></a>
+                    <a href="{{ site.url }}/injuredpixels/android/" class="aur-appname">InjuredPixels<span class="hidden-xs-down"> for Android</span></a>
                     Check the screen of your Android device for dead pixels, scratches or defects.
                 </h1>
                 <p>
-                    <a class="btn btn-primary" href="{{ site.custom.url }}/injuredpixels/android/download/" role="button">
+                    <a class="btn btn-primary" href="{{ site.url }}/injuredpixels/android/download/" role="button">
                         <span class="hidden-sm-up">Get it Free for Android</span>
                         <span class="hidden-xs-down">Install for Free</span>
                     </a>
                 </p>
-                <p class="aur-extra">Also available for <a class="aur-link" href="{{ site.custom.url }}/injuredpixels/windows/">Windows</a></p>
+                <p class="aur-extra">Also available for <a class="aur-link" href="{{ site.url }}/injuredpixels/windows/">Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/injuredpixels/android/">
+                <a href="{{ site.url }}/injuredpixels/android/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.custom.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-image.png"
+                    src="{{ site.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-image.png"
                     alt="InjuredPixels for Android Screenshot" />
                 </a>
             </div>
