--- a/_includes/jumbotrons/thumbico-windows.html
+++ b/_includes/jumbotrons/thumbico-windows.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/thumbico/windows/" class="aur-appname">Thumbico</a>
+                    <a href="{{ site.url }}/thumbico/windows/" class="aur-appname">Thumbico</a>
                     View the large thumbnail or icon of any file, document, or program on your PC.
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.custom.url }}/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/thumbico/windows/">
+                <a href="{{ site.url }}/thumbico/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.custom.url }}/img/apps/thumbico/windows/jumbotron/thumbico-windows-jumbotron-image.png" alt="Thumbico Screenshot" />
+                    src="{{ site.url }}/img/apps/thumbico/windows/jumbotron/thumbico-windows-jumbotron-image.png" alt="Thumbico Screenshot" />
                 </a>
             </div>
         </div>
