--- a/_includes/jumbotrons/whatsmyco-web.html
+++ b/_includes/jumbotrons/whatsmyco-web.html
@@ -4,14 +4,14 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/whatsmyco/web/" class="aur-appname">WhatsMyCo</a>
+                    <a href="{{ site.url }}/whatsmyco/web/" class="aur-appname">WhatsMyCo</a>
                     Type your name or text and get your matching color! A fun way to discover colors!
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.custom.url }}/whatsmyco/web/download/" role="button">Run in Your Browser</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/whatsmyco/web/download/" role="button">Run in Your Browser</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/whatsmyco/web/">
-                    <img class="img-fluid aur-jumbotron-shot" src="{{ site.custom.url }}/img/apps/whatsmyco/web/jumbotron/whatsmyco-web-jumbotron-image.png"
+                <a href="{{ site.url }}/whatsmyco/web/">
+                    <img class="img-fluid aur-jumbotron-shot" src="{{ site.url }}/img/apps/whatsmyco/web/jumbotron/whatsmyco-web-jumbotron-image.png"
                     alt="WhatsMyCo Screenshot" />
                 </a>
             </div>
