--- a/_includes/stripes/featured/home.html
+++ b/_includes/stripes/featured/home.html
@@ -1,32 +1,32 @@
 <!-- CinemaDrape for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://lifehacker.com/5465228/cinemadrape-creates-a-distraction-free-zone-for-any-application" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
     </a>
     <a href="http://revision3.com/tzdaily/2010-07-01cinedrape" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
     </a>
     <a href="https://gb.zinio.com/www/browse/issue.jsp?skuId=416124197#/" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
+        <img class="aur-featured-logo" height="30" src="{{ site.url }}/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
     </a>
     <a href="http://www.digi24.ro/Stiri/Digi24/Sci-tech/Tehnologie/Aplicatie+pentru+dislexici" target="_blank">
-        <img class="aur-featured-logo" height="50" src="{{ site.custom.url }}/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
+        <img class="aur-featured-logo" height="50" src="{{ site.url }}/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
     </a>
     <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
+        <img class="aur-featured-logo" height="30" src="{{ site.url }}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
     </a>
 
     <a href="https://ca.finance.yahoo.com/news/dead-pixel-down-tricks-might-191544906.html" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/y/yahoo/yahoo-finance-white.png" alt="Yahoo! Finance" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/y/yahoo/yahoo-finance-white.png" alt="Yahoo! Finance" />
     </a>
     <a href="http://www.chip.de/downloads/PixelHealer-Portable_88736206.html" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
     </a>
     <a href="http://exame.abril.com.br/blogs/aplicativos/windows/htmtied-gerencia-bookmark-a-partir-da-area-de-trabalho/" target="_blank">
-        <img class="aur-featured-logo" height="25" src="{{ site.custom.url }}/img/third/reviews/e/exame/exame-white.svg" alt="Exame" />
+        <img class="aur-featured-logo" height="25" src="{{ site.url }}/img/third/reviews/e/exame/exame-white.svg" alt="Exame" />
     </a>
     <a href="http://verytech.smartworld.it/come-visualizzare-pagine-web-offline-114204.html" target="_blank">
-        <img class="aur-featured-logo" height="35" src="{{ site.custom.url }}/img/third/reviews/s/smartworld-it/smartworld-it-white.svg" alt="SmartWorld" />
+        <img class="aur-featured-logo" height="35" src="{{ site.url }}/img/third/reviews/s/smartworld-it/smartworld-it-white.svg" alt="SmartWorld" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
