--- a/_includes/templates/app-secondary-menu.html
+++ b/_includes/templates/app-secondary-menu.html
@@ -4,19 +4,19 @@
         <nav class="aur-secondary-menu" >
             <div class="row no-gutters justify-content-center">
                 <div class="col-4 col-sm">
-                    <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="{{ site.custom.url }}{{page.appurl}}">Overview</a>
+                    <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="{{ site.url }}{{page.appurl}}">Overview</a>
                 </div>
                 <div class="col-4 col-sm">
-                    <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="{{ site.custom.url }}{{page.appurl}}help/">Help</a>
+                    <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="{{ site.url }}{{page.appurl}}help/">Help</a>
                 </div>
                 <div class="col-4 col-sm">
-                    <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="{{ site.custom.url }}{{page.appurl}}reviews/">Reviews</a>
+                    <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="{{ site.url }}{{page.appurl}}reviews/">Reviews</a>
                 </div>
                 <div class="col-4 col-sm">
-                    <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="{{ site.custom.url }}{{page.appurl}}history/">History</a>
+                    <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="{{ site.url }}{{page.appurl}}history/">History</a>
                 </div>
                 <div class="col-4 col-sm">
-                    <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="{{ site.custom.url }}{{page.appurl}}download/">Download</a>
+                    <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="{{ site.url }}{{page.appurl}}download/">Download</a>
                 </div>
             </div>
         </nav>
