--- a/_includes/various/article-list.html
+++ b/_includes/various/article-list.html
@@ -2,31 +2,31 @@
 <ul class="fa-ul aur-strong-list">
     <li>
         <i class="fa-li fa fa-file-text-o"></i>
-        <a class="aur-heading-link" href="{{ site.custom.url }}/articles/color-desktop-wallpapers-fingertips/">
+        <a class="aur-heading-link" href="{{ site.url }}/articles/color-desktop-wallpapers-fingertips/">
             Colortypist - Color Desktop Wallpapers At Your Fingertips
         </a>
     </li>
     <li>
         <i class="fa-li fa fa-file-text-o"></i>
-        <a class="aur-heading-link" href="{{ site.custom.url }}/articles/diy-pixel-fix/">
+        <a class="aur-heading-link" href="{{ site.url }}/articles/diy-pixel-fix/">
             PixelHealer - DIY Pixel Fix: Fix Dead, Stuck Or Hot Pixels Hassle Free
         </a>
     </li>
     <li>
         <i class="fa-li fa fa-file-text-o"></i>
-        <a class="aur-heading-link" href="{{ site.custom.url }}/articles/freedom-favorites-portable-bookmarks/">
+        <a class="aur-heading-link" href="{{ site.url }}/articles/freedom-favorites-portable-bookmarks/">
             HTMtied - Freedom-Tied Favorites: How To Create Portable Bookmarks?
         </a>
     </li>
     <li>
         <i class="fa-li fa fa-file-text-o"></i>
-        <a class="aur-heading-link" href="{{ site.custom.url }}/articles/instant-screen-area-focus/">
+        <a class="aur-heading-link" href="{{ site.url }}/articles/instant-screen-area-focus/">
             CinemaDrape - Instant Screen Area Focus With CinemaDrape
         </a>
     </li>
     <li>
         <i class="fa-li fa fa-file-text-o"></i>
-        <a class="aur-heading-link" href="{{ site.custom.url }}/articles/pixel-test-monitor-trouble-spots/">
+        <a class="aur-heading-link" href="{{ site.url }}/articles/pixel-test-monitor-trouble-spots/">
             InjuredPixels - Pixel Test Your Monitor For Its Trouble Spots
         </a>
     </li>
