--- a/_layouts/article-page.html
+++ b/_layouts/article-page.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron jumbotron-fluid aur-info-jumbotron">
     <div class="container">
-        <h1 class="aur-jumbotron-heading"><a href="{{ site.custom.url }}/articles/">Articles</a></h1>
+        <h1 class="aur-jumbotron-heading"><a href="{{ site.url }}/articles/">Articles</a></h1>
     </div>
 </div>
 
