--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -11,7 +11,7 @@
             <div class="col-lg-6 aur-jumbotron-shot-container">
                 <a href="http://www.east-tec.com/eraser/download/?utm_source=aurelitec&utm_medium=sponsor&utm_campaign={{ page.url | slugify }}" target="_blank">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.custom.url }}/img/third/east-tec/east-tec-jumbotron-image.png"
+                    src="{{ site.url }}/img/third/east-tec/east-tec-jumbotron-image.png"
                     alt="east-tec Eraser Screenshot" />
                 </a>
             </div>
