--- a/_includes/jumbotrons/pixelhealer-windows.html
+++ b/_includes/jumbotrons/pixelhealer-windows.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.custom.url }}/pixelhealer/windows/" class="aur-appname">PixelHealer</a>
+                    <a href="{{ site.url }}/pixelhealer/windows/" class="aur-appname">PixelHealer</a>
                     Try to fix dead, stuck or hot pixels by yourself, before running back to the store!
                 </h1>
-                <p><a class="btn btn-primary" href="{{ site.custom.url }}/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
+                <p><a class="btn btn-primary" href="{{ site.url }}/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
             </div>
             <div class="col-lg-6 aur-jumbotron-shot-container">
-                <a href="{{ site.custom.url }}/pixelhealer/windows/">
+                <a href="{{ site.url }}/pixelhealer/windows/">
                     <img class="img-fluid aur-jumbotron-shot"
-                    src="{{ site.custom.url }}/img/apps/pixelhealer/windows/jumbotron/pixelhealer-windows-jumbotron-image.png" alt="PixelHealer Screenshot" />
+                    src="{{ site.url }}/img/apps/pixelhealer/windows/jumbotron/pixelhealer-windows-jumbotron-image.png" alt="PixelHealer Screenshot" />
                 </a>
             </div>
         </div>
