--- a/_includes/stripes/featured/colorveil-windows.html
+++ b/_includes/stripes/featured/colorveil-windows.html
@@ -1,19 +1,19 @@
 <!-- ColorVeil Featured Logos -->
 {% capture thecontent %}
     <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-        <img class="aur-featured-logo" height="30" src="{{ site.custom.url }}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
+        <img class="aur-featured-logo" height="30" src="{{ site.url }}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
     </a>
     <a href="http://colorveil.software.informer.com/" target="_blank">
-        <img class="aur-featured-logo" height="25" src="{{ site.custom.url }}/img/third/reviews/s/software-informer/software-informer-white.svg" alt="Software Informer" />
+        <img class="aur-featured-logo" height="25" src="{{ site.url }}/img/third/reviews/s/software-informer/software-informer-white.svg" alt="Software Informer" />
     </a>
     <a href="http://www.digi24.ro/Stiri/Digi24/Sci-tech/Tehnologie/Aplicatie+pentru+dislexici" target="_blank">
-        <img class="aur-featured-logo" height="50" src="{{ site.custom.url }}/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
+        <img class="aur-featured-logo" height="50" src="{{ site.url }}/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
     </a>
     <!-- <a href="http://www.computerworlduk.com/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/c/computerworld/computerworld-white.png" alt="Computerworld" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/c/computerworld/computerworld-white.png" alt="Computerworld" />
     </a> -->
     <a href="http://www.rockybytes.com/colorveil" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
