--- a/_includes/stripes/featured/htmtied-windows.html
+++ b/_includes/stripes/featured/htmtied-windows.html
@@ -1,16 +1,16 @@
 <!-- HTMtied for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://exame.abril.com.br/blogs/aplicativos/windows/htmtied-gerencia-bookmark-a-partir-da-area-de-trabalho/" target="_blank">
-        <img class="aur-featured-logo" height="25" src="{{ site.custom.url }}/img/third/reviews/e/exame/exame-white.svg" alt="Exame" />
+        <img class="aur-featured-logo" height="25" src="{{ site.url }}/img/third/reviews/e/exame/exame-white.svg" alt="Exame" />
     </a>
     <a href="http://verytech.smartworld.it/come-visualizzare-pagine-web-offline-114204.html" target="_blank">
-        <img class="aur-featured-logo" height="35" src="{{ site.custom.url }}/img/third/reviews/s/smartworld-it/smartworld-it-white.svg" alt="SmartWorld" />
+        <img class="aur-featured-logo" height="35" src="{{ site.url }}/img/third/reviews/s/smartworld-it/smartworld-it-white.svg" alt="SmartWorld" />
     </a>
     <a href="http://www.addictivetips.com/windows-tips/htmtied-create-html-file-shortcuts-for-website-to-run-anywhere/" target="_blank">
-        <img class="aur-featured-logo" height="35" src="{{ site.custom.url }}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
+        <img class="aur-featured-logo" height="35" src="{{ site.url }}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
     </a>
     <a href="http://www.rockybytes.com/htmtied" target="_blank">
-        <img class="aur-featured-logo" height="40" src="{{ site.custom.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
+        <img class="aur-featured-logo" height="40" src="{{ site.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
