--- a/_includes/various/licenses/apache.html
+++ b/_includes/various/licenses/apache.html
@@ -1,7 +1,7 @@
 <div class="aur-content-group">
 <p class="aur-content-item">
     {{include.appname}} is free software; you can redistribute it and modify it under the terms of the Apache License.
-    Feel free to <a href="{{ site.custom.url }}/support/">contact us</a> for usages under other licenses.
+    Feel free to <a href="{{ site.url }}/support/">contact us</a> for usages under other licenses.
 </p>
 
 <pre id="license-text">
